# fi_verifiable_data

./: Cargo.toml  README.md  index.html
.github/workflows/: publish.yaml
examples/: vc.html  vp.html
pkg/: README.md  fi_verifiable_data.d.ts  fi_verifiable_data.js  fi_verifiable_data_bg.wasm  fi_verifiable_data_bg.wasm.d.ts  package.json
src/: constants.rs  document.rs  error.rs  lib.rs  main.rs  proof.rs  vc.rs  vp.rs
tests/: vc_test.rs  vp_test.rs
