[package]
name = "fi-verifiable-data"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.38"
fi-digital-signatures = "0.0.5"
js-sys = "0.3.70"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_ignored = "0.1.10"
serde_json = "1.0.122"
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
wasm-bindgen-struct = "0.1.0"

[features]
wasm = []

[dev-dependencies]
hex = "0.4.3"
