[package]
name = "fi-verifiable-data"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/Fidenz/fi_verifiable_data"
authors = ["Ravindu Wijegunawardhana <ravindu.w@gmail.com"]
description = "VC and VP wrapper for rust and WASM. fi-digital-signatures crate is used to sign and verify the data objects." 
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["sign", "verify", "identity"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.38"
fi-digital-signatures = {version = "0.0.5", default-features = false}
js-sys = "0.3.70"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_ignored = "0.1.10"
serde_json = "1.0.122"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] } 

[dev-dependencies]
hex = "0.4.3"

[features]
wasm = []